# book-notes

./: .gitignore  README.md
AWSではじめるインフラ構築入門/: chap10.md  chap3.md  chap4.md  chap5.md  chap6.md  chap7.md  chap8.md  chap9.md
AWS生成AIアプリ構築実践ガイド/: chap6.md
AWS生成AIアプリ構築実践ガイド/src/: backend.py  constants.py  eval.ipynb  frontend.py  main.py  pyproject.toml  requirements.txt  tools.py
AWS生成AIアプリ構築実践ガイド/src/eval_data/: eval_data.pkl
AWS生成AIアプリ構築実践ガイド/src/tests/: test_tools.py
Docker&Kubernetesのきほんのきほん/: chap2.md  chap3.md  chap4.md  chap5.md  chap7.md
Docker&Kubernetesのきほんのきほん/sandbox/chap6_mount/apa_dir/: index.html
Docker&Kubernetesのきほんのきほん/sandbox/chap7_docker_compose/: docker-compose.yml
IoTプロジェクトで学ぶ実践PoC/: chap1.md  chap4.md  chap6.md
Reactハンズオンラーニング/: chap1.md  chap5.md
Reactハンズオンラーニング/sandbox/: chap4.html  chap5.html  chap5.jsx  eslint.config.mjs  main.html  package-lock.json  package.json
Reactハンズオンラーニング/sandbox/chap6/: package-lock.json  package.json
Reactハンズオンラーニング/sandbox/chap6/src/: App.js  index.js
Reactハンズオンラーニング/sandbox/chap7/: package-lock.json  package.json
Reactハンズオンラーニング/sandbox/chap7/src/: App.js
Reactハンズオンラーニング/sandbox/chap8/: package-lock.json  package.json
Reactハンズオンラーニング/sandbox/chap8/src/: FakeUsers.js  Fetch.js  GithubUser.js  List.js  SearchForm.js  index.js  (+3 more)
Reactハンズオンラーニング/sandbox/my-project/: package-lock.json
Reactハンズオンラーニング/sandbox/recipes-app/: package-lock.json  package.json  webpack.config.js
THE ELEMENTS OF USER EXPERIENCE/: chap3.md
なぜ、これが名画なの？/: chap1.md  chap2.md  chap6.md
大人のための国語ゼミ/: chap1.md
(+17 files in other folders)
